--- a/Views/Task/EditTask.cshtml
+++ b/Views/Task/EditTask.cshtml
@@ -69,7 +69,7 @@
 
         function TaskSaved(response) {
             if (response == 1) {
-                window.location.href = "/Project/ListAllTasks";
+                window.location.href = "/Task/ListAllTasks";
             }
         }
     }
