--- a/Views/Task/AddTask.cshtml
+++ b/Views/Task/AddTask.cshtml
@@ -113,7 +113,7 @@
             dataType: "json",
             success: function (response) {
                 if (response === 1) {
-                    window.location.href = "/Project/ListAllTasks";
+                    window.location.href = "/Task/ListAllTasks";
                 }
             }
         });
