--- a/Views/Project/UploadProject.cshtml
+++ b/Views/Project/UploadProject.cshtml
@@ -55,7 +55,7 @@
             </div>
 
             <div class="form-group">
-                <button type="submit" onclick="UploadProject()" class="btn-success btn-sm" value="Upload">Upload Project</button>
+                <button type="submit" onclick="submitProject()" class="btn-success btn-sm" value="Upload">Upload Project</button>
             </div>
 
         </div>
