--- a/Views/Result/AddResult.cshtml
+++ b/Views/Result/AddResult.cshtml
@@ -69,7 +69,7 @@
                     <option value="" disabled selected>Select Student</option>
                     @foreach (var option in Model.AssignedTo)
                     {
-                        <option value="@option.Values">@option.Text</option>
+                        <option value="@option.Value">@option.Text</option>
                     }
                 </select>
             </div>
