--- a/Views/Home/Register.cshtml
+++ b/Views/Home/Register.cshtml
@@ -96,12 +96,12 @@
             <input type="file" id="UploadDocument" class="form-control-file" multiple>
         </div>*@
         <br />
-        <div class="col-12">
+        @*<div class="col-12">
             <div class="form-check">
                 <input class="form-check-input" type="checkbox" id="gridCheck">
                 <label class="form-check-label" for="gridCheck">Check me out</label>
             </div>
-        </div>
+        </div>*@
         <div class="col-12">
             <button type="submit" class="btn btn-primary">Sign in</button>
         </div>
