--- a/Views/Project/StudentProjectGrid.cshtml
+++ b/Views/Project/StudentProjectGrid.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<FYPM.Models.ProjectList>
+﻿@model List<FYPM.Models.ProjectDetail>
 @{
     ViewBag.Title = "StudentProjectGrid";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -25,15 +25,15 @@
                                     </tr>
                                 </thead>
                                 <tbody id="table_body" class="scrollable">
-                                    @foreach (var projectlist in Model)
+                                    @foreach (var projectDetail in Model)
                                     {
                                         <tr>
-                                            <td>@projectlist.Title</td>
-                                            <td>@projectlist.ProjectDescription</td>
-                                            <td>@projectlist.TotalMarks</td>
-                                            <td>@projectlist.StudentsAllowed</td>
+                                            <td>@projectDetail.Title</td>
+                                            <td><iframe src="@projectDetail.ProjectDocuments" width="100%" height="500px"></iframe></td>
+                                            <td>100</td>
+                                            <td>@projectDetail.StudentsAllowed</td>
                                             <td>
-                                                <a data-project-id="@projectlist.ProjectId" class="btn btn-success register-button">Project Request</a>
+                                                <a data-project-id="@projectDetail.ProjectId" class="btn btn-success register-button">Project Request</a>
                                             </td>
                                         </tr>
                                     }
@@ -57,7 +57,7 @@
 
             $.ajax({
                 type: "POST",
-                url: "/Project/ProjectRequest",
+                url: "/Project/RegisterProject",
                 data: { projectId: projectId },
                 success: function (response) {
                     if (response == 1) {
