--- a/Views/TimeTable/TimeTable.cshtml
+++ b/Views/TimeTable/TimeTable.cshtml
@@ -1,7 +1,7 @@
-﻿@*@{
+﻿@{
     ViewBag.Title = "Timetable";
-    Layout = "~/Views/_LayoutPage1.cshtml";
-}*@
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 
 @model List<FYPM.Models.ViewModel.TimetableViewModel>
 
