--- a/Views/Meeting/Meetings.cshtml
+++ b/Views/Meeting/Meetings.cshtml
@@ -1,11 +1,13 @@
-﻿@{
-    ViewBag.Title = "Result";
+﻿
+@{
+    ViewBag.Title = "Meeting";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@model List<FYPM.Models.Result>
+@model List<FYPM.Models.Meeting>
 
-<a style="margin-left:10px" href="@Url.Action("AddResult")" class="btn btn-primary">Create Result</a>
+<a style="margin-left:10px" href="@Url.Action("AddMeeting")" class="btn btn-primary">Create Meeting</a>
+
 
 <div class="wrapper wrapper-content animated fadeInRight">
     <div class="row">
@@ -17,24 +19,25 @@
                             <table class="table  table-hover table-responsive table-striped">
                                 <thead>
                                     <tr>
-                                        <th>Task</th>
-                                        <th>Student</th>
-                                        <th>Task Status</th>
-                                        <th>Score</th>
+                                        <th>Meeting ID</th>
+                                        <th>Meeting Type</th>
+                                        <th>Assigned To</th>
+                                        <th>Scheduled Date</th>
+                                        <th>Delete</th>
                                     </tr>
                                 </thead>
                                 <tbody id="table_body" class="scrollable">
                                     @if (Model.Count() > 0)
                                     {
-                                        foreach (var result in Model)
+                                        foreach (var meeting in Model)
                                         {
                                             <tr>
-                                                <td>@result.Task.TaskName</td>
-                                                <td>@string.Concat(result.User.FirstName, " ", result.User.LastName, " - ", result.User.CustomId)</td>
-                                                <td>@result.Task.TaskStatus</td>
-                                                <td>@result.Score</td>
+                                                <td>@meeting.MeetingId</td>
+                                                <td>@meeting.MeetingType</td>
+                                                <td>@string.Concat(meeting.User.FirstName, " ", meeting.User.LastName)</td>
+                                                <td>@meeting.ScheduledDate.Date</td>
                                                 <td>
-                                                    <a class="btn btn-danger delete-button" data-id="@result.ResultId">Delete</a>
+                                                    <a class="btn btn-danger delete-button" data-id="@meeting.MeetingId">Delete</a>
                                                 </td>
                                             </tr>
                                         }
@@ -54,10 +57,10 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">Delete Result</h4>
+                <h4 class="modal-title">Delete Meeting</h4>
             </div>
             <div class="modal-body">
-                <p>Are you sure you want to delete this result?</p>
+                <p>Are you sure you want to delete this meeting?</p>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
@@ -84,9 +87,9 @@
 
         $("#confirmDeleteButton").on("click", function () {
             $.ajax({
-                url: "@Url.Action("Delete", "Result")" + "?id=" + idToDelete,
+                url: "@Url.Action("Delete", "Meeting")" + "?id=" + idToDelete,
                 type: "POST",
-                success: window.location.href = "/Result/ListAllResults"
+                success: window.location.href = "/Meeting/ListAllMeetings"
             });
         });
     });
