--- a/Views/Result/AddResult.cshtml
+++ b/Views/Result/AddResult.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "AddResult";
-    Layout = "~/Views/_LayoutPage1.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @model FYPM.Models.ViewModel.ResultViewModel
