--- a/Views/Result/StudentResult.cshtml
+++ b/Views/Result/StudentResult.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "Result";
-    Layout = "~/Views/_LayoutPage1.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 @model List<FYPM.Models.Result>
