--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,37 +4,117 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             @Html.ActionLink("FYPMS", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
+            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
                     <li>@Html.ActionLink("Register", "Register", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Login", "Login", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Logout", "Logout", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                </ul>
+                <ul class="nav metismenu" id="side-menu">
+                    <li>
+                        @if (Session["RoleName"] != null)
+                        {
+                            if (Session["RoleName"].ToString() == "Admin")
+                            {
+                                <a href="#"><i class="fa fa-book"></i> <span class="nav-label">Accounts</span> <span class="fa arrow"></span></a>
+                                <ul class="nav nav-second-level">
+                                    <li><a href="/User/CreateUser">Add User</a></li>
+                                    <li><a href="/User/UsersDetail">View Users</a></li>
+                                </ul>
+                            }
+                            if (Session["RoleName"].ToString() == "Supervisor")
+                            {
+                                <ul class="nav nav-second-level collapse in">
+                                    <li><a href="/Project/AddProject">Add Project</a></li>
+                                    <li><a href="/Project/ListAllProjects">View Projects</a></li>
+                                    <li><a href="/Project/ListAllTasks">Tasks</a></li>
+                                    <li><a href="/Message/Message">Messages</a></li>
+                                    <li><a href="/Meeting/ListAllMeetings">Meetings</a></li>
+                                    <li><a href="/Result/ListAllResults">Results</a></li>
+                                    <li><a href="/Timetable/ListAllTimetables">Timetable</a></li>
+                                </ul>
+                            }
+                            if (Session["RoleName"].ToString() == "Student")
+                            {
+                                <ul class="nav nav-second-level collapse in">
+                                    <li><a href="/Project/ListAllStudentProjects">View Projects</a></li>
+                                    <li><a href="/Task/ShowAllTasks">Tasks Assigned</a></li>
+                                    <li><a href="/Message/Message">Messages</a></li>
+                                    <li><a href="/Meeting/ListAllStudentMeetings">Meetings</a></li>
+                                    <li><a href="/Result/ListAllStudentResults">Results</a></li>
+                                    <li><a href="/Timetable/ListAllTimetables">Timetable</a></li>
+                                </ul>
+                            }
+                        }
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <div class="container body-content">
+    <div class="container mt-3">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
     </div>
-
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+    <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
+        <div class="navbar-header">
+            <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a>
+        </div>
+        <ul class="nav navbar-top-links navbar-right">
+            <li>
+                <span class="m-r-sm text-muted welcome-message">@Session["Email"]</span>
+                @if (Session["RoleName"] != null)
+                {
+                    if (Session["RoleName"].ToString() == "Supervisor")
+                    {
+                        <span class="m-r-sm text-muted welcome-message"> Supervisor Panel</span>
+                    }
+                    else if (Session["RoleName"].ToString() == "Admin")
+                    {
+                        <span class="m-r-sm text-muted welcome-message"> Admin Panel</span>
+                    }
+                    else if (Session["RoleName"].ToString() == "Student")
+                    {
+                        <span class="m-r-sm text-muted welcome-message"> Student Panel</span>
+                    }
+                }
+            </li>
+        </ul>
+    </nav>
+    <script src="~/Content/js/jquery-2.1.1.js"></script>
+    <script src="~/Content/js/bootstrap.bundle.min.js"></script>
+    <script src="~/Content/js/plugins/metisMenu/jquery.metisMenu.js"></script>
+    <script src="~/Content/js/plugins/slimscroll/jquery.slimscroll.min.js"></script>
+    <script src="~/Content/js/plugins/footable/footable.all.min.js"></script>
+    <script src="~/Content/js/inspinia.js"></script>
+    <script src="~/Content/js/plugins/pace/pace.min.js"></script>
+    <script type="text/javascript">
+        function preventBack() {
+            window.history.forward();
+        }
+        setTimeout("preventBack()", 0);
+        window.onunload = function () { null };
+    </script>
+    <script>
+        $(document).ready(function () {
+            setTimeout("preventBack()", 0);
+            $('.footable').footable();
+            $('.footable2').footable();
+        });
+    </script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
