--- a/Views/Project/ProjectGrid.cshtml
+++ b/Views/Project/ProjectGrid.cshtml
@@ -4,49 +4,54 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @model List<FYPM.Models.ProjectDetail>
-<h2 style="margin-left:10px;">Project Details</h2>
-
-<a style="margin-left:10px" href="@Url.Action("UploadProject")" class="btn btn-primary">Create Project</a>
 
 
-<div class="wrapper wrapper-content animated fadeInRight">
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="ibox float-e-margins">
-                <div class="ibox-content">
-                    <div class="wrapper wrapper-content">
-                        <div class="row">
-                            <table class="table  table-hover table-responsive table-striped" id="mttable">
-                                <thead>
-                                    <tr>
-                                        <th>Title</th>
-                                        <th>Skill</th>
-                                        <th>Domain</th>
-                                        <th>Tools</th>
-                                        <th>Students Allowed</th>
-                                        <th>Edit</th>
-                                        <th>Delete</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="table_body" class="scrollable">
-                                    @foreach (var project in Model)
-                                    {
-                                        <tr>
-                                            <td>@project.Title</td>
-                                            <td>@project.Skills</td>
-                                            <td>@project.Domain</td>
-                                            <td>@project.Tools</td>
-                                            <td>@project.StudentsAllowed</td>
-                                            <td>
-                                                <a class="btn btn-primary edit-button" href="/Project/EditProject/@project.ProjectId" data-id="@project.ProjectId">Edit</a>
-                                            </td>
-                                            <td>
-                                                <a class="btn btn-danger delete-button" data-id="@project.ProjectId">Delete</a>
-                                            </td>
-                                        </tr>
-                                    }
-                                </tbody>
-                            </table>
+<div class="card p-3 mt-3">
+    <div class="card-title d-flex flex-wrap justify-content-between align-items-center mb-0">
+        <h3 class="card-label">
+            Project Details
+        </h3>
+        <a style="margin-left:10px" href="@Url.Action("UploadProject")" class="btn btn-primary">Create Project</a>
+    </div>
+    <div class="card-body">
+        <div class="wrapper wrapper-content animated fadeInRight">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="ibox float-e-margins">
+                        <div class="ibox-content">
+                            <div class="wrapper wrapper-content table-responsive">
+                                    <table class="cstm_table table table-hover table-striped" id="mttable">
+                                        <thead>
+                                            <tr>
+                                                <th>Title</th>
+                                                <th>Skill</th>
+                                                <th>Domain</th>
+                                                <th>Tools</th>
+                                                <th>Students Allowed</th>
+                                                <th>Edit</th>
+                                                <th>Delete</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody id="table_body" class="scrollable">
+                                            @foreach (var project in Model)
+                                            {
+                                                <tr>
+                                                    <td>@project.Title</td>
+                                                    <td>@project.Skills</td>
+                                                    <td>@project.Domain</td>
+                                                    <td>@project.Tools</td>
+                                                    <td>@project.StudentsAllowed</td>
+                                                    <td>
+                                                        <a class="btn btn-primary edit-button" href="/Project/EditProject/@project.ProjectId" data-id="@project.ProjectId">Edit</a>
+                                                    </td>
+                                                    <td>
+                                                        <a class="btn btn-danger delete-button" href="/Project/DeleteProject/@project.ProjectId" data-id="@project.ProjectId">Delete</a>
+                                                    </td>
+                                                </tr>
+                                            }
+                                        </tbody>
+                                    </table>
+                            </div>
                         </div>
                     </div>
                 </div>
