--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -4,37 +4,198 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <style>
+        .main-content-body {
+            background-color: #f6f8fb;
+            height: 90vh;
+            Margin-left: 230px !important;
+            width: calc(100% - 230px);
+            transition: .4s ease all;
+        }
+        body {
+            height: 100%; /* 100% of the viewport height */
+            margin: 0; /* Remove default margin */
+            padding: 0; /* Remove default padding */
+        }
+        .sideNavbar-main {
+            min-width: 230px;
+            width: 230px;
+            background: #fff;
+            position: absolute;
+            z-index: 99;
+            height: 100%;
+        }
+        #sidebar .nav-link.active {
+            background-color: #007bff; 
+            color: #fff; 
+        }
+        .sidebar-ul .nav-item .nav-link {
+            display: flex;
+            align-items: center;
+            justify-content: start;
+            color: #575757 !important;
+            border-right: 3px solid transparent !important;
+            padding: 10px 8px 10px 16px;
+            font-size: 14px;
+        }
+        .cstm_table thead tr th {
+            background-color: #fafafa !important;
+            font-size: 14px;
+            border: 0;
+        }
+        .sidebar-ul .nav-item .nav-link.active {
+            font-weight: 600;
+            background: #f0f0f0 !important;
+            color: black !important;
+            border-color: black !important;
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
-        <div class="container">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             @Html.ActionLink("FYPMS", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
+            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
-                    <li>@Html.ActionLink("Register", "Register", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Login", "Login", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    @if (string.IsNullOrEmpty(Session["UserID"]?.ToString()))
+                    {
+                        <li>@Html.ActionLink("Register", "Register", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                        <li>@Html.ActionLink("Login", "Login", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                        <li>@Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                        <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    }
+                    @if (!string.IsNullOrEmpty(Session["UserID"]?.ToString()))
+                    {
+                        <li>@Html.ActionLink("Logout", "Logout", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    }
+                    </ul>
+                <ul class="nav navbar-top-links navbar-right">
+                    <li>
+                        <span class="m-r-sm text-muted welcome-message">@Session["Email"]</span>
+                        @if (Session["RoleName"] != null)
+                        {
+                            if (Session["RoleName"].ToString() == "Supervisor")
+                            {
+                                <span class="m-r-sm text-muted welcome-message"> Supervisor Panel</span>
+                            }
+                            else if (Session["RoleName"].ToString() == "Admin")
+                            {
+                                <span class="m-r-sm text-muted welcome-message"> Admin Panel</span>
+                            }
+                            else if (Session["RoleName"].ToString() == "Student")
+                            {
+                                <span class="m-r-sm text-muted welcome-message"> Student Panel</span>
+                            }
+                        }
+                    </li>
                 </ul>
             </div>
-        </div>
     </nav>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+    <div class="container-fluid">
+        <div class="d-flex">
+            @if (Session["RoleName"] != null)
+            {
+                <nav id="sidebar" class="sideNavbar-main border-right pt-2 d-flex flex-column justify-content-between sidebar">
+                    <div class="position-sticky">
+                        @if (Session["RoleName"].ToString() == "Admin")
+                        {
+                            <ul class="nav flex-column sidebar-ul">
+                                <li class="nav-item">
+                                    <a class="nav-link active" href="/Users/UsersDetail">
+                                        Users
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">
+                                        Link 1
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">
+                                        Link 2
+                                    </a>
+                                </li>
+                                <!-- Add more links as needed -->
+                            </ul>
+                        }
+                        @if (Session["RoleName"].ToString() == "Supervisor")
+                        {
+                            <ul class="nav flex-column sidebar-ul">
+                                <li class="nav-item"><a class="nav-link" href="/Project/ListAllProjects">Projects</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/Task/ListAllTasks">Tasks</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/Messages/Message">Messages</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/Meeting/ListAllMeetings">Meetings</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/Result/ListAllResults">Results</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/Timetable/ListAllTimetables">Timetable</a></li>
+                                <!-- Add more links as needed -->
+                            </ul>
+                        }
+                        @if (Session["RoleName"].ToString() == "Student")
+                        {
+                        <ul class="nav flex-column sidebar-ul">
+                            <li class="nav-item"><a class="nav-link" href="/Project/ListAllStudentProjects">View Projects</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/Task/ShowAllTasks">Tasks Assigned</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/Message/Message">Messages</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/Meeting/ListAllStudentMeetings">Meetings</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/Result/ListAllStudentResults">Results</a></li>
+                            <li class="nav-item"><a class="nav-link" href="/Timetable/ListAllTimetables">Timetable</a></li>
+                        </ul>
+                        }
+                    </div>
+                </nav>
+            }
+                <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 main-content-body d-flex flex-column mt-2">
+                    <!-- Your page content goes here -->
+                    @RenderBody()
+                </main>
+            </div>
     </div>
+    <script src="~/Scripts/jquery-3.4.1.js"></script>
+    <script src="~/Scripts/bootstrap.bundle.min.js"></script>
+    <script src="~/Scripts/js/jquery.metisMenu.js"></script>
+    <script src="~/Scripts/js/jquery.slimscroll.min.js"></script>
+    <script src="~/Scripts/js/footable.all.min.js"></script>
+    @*<script src="~/Content/js/inspinia.js"></script>*@
+    <script src="~/Scripts/js/pace.min.js"></script>
+    <script type="text/javascript">
+        function preventBack() {
+            window.history.forward();
+        }
+        setTimeout("preventBack()", 0);
+        window.onunload = function () { null };
+        function setActive(item) {
+            // Remove the "active" class from all links
+            var links = document.querySelectorAll('#sidebar .nav-link');
+            links.forEach(function (link) {
+                link.classList.remove('active');
+            });
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+            // Add the "active" class to the clicked link
+            var clickedLink = document.querySelector('#sidebar .nav-link[href*="' + item + '"]');
+            clickedLink?.classList?.add('active');
+        }
+
+        // Set active class on page load based on the current URL
+        window.onload = function () {
+            var currentPath = window.location.pathname.split('/').pop().split('.')[0];
+            setActive(currentPath);
+        };
+    </script>
+    <script>
+        $(document).ready(function () {
+            setTimeout("preventBack()", 0);
+            $('.footable').footable();
+            $('.footable2').footable();
+        });
+    </script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
