--- a/Views/Task/Task.cshtml
+++ b/Views/Task/Task.cshtml
@@ -7,54 +7,59 @@
 
 @model List<FYPM.Models.Task>
 
-<!-- Create Task Button -->
-<a style="margin-left:10px" href="@Url.Action("AddTask")" class="btn btn-primary">Create Task</a>
 
-<!-- Tasks Grid -->
+<div class="card p-3 mt-3">
+    <div class="card-title d-flex flex-wrap justify-content-between align-items-center mb-0">
+        <h3 class="card-label">
+            Tasks
+        </h3>
+        <a style="margin-left:10px" href="@Url.Action("AddTask")" class="btn btn-primary">Create Task</a>
 
-<div class="wrapper wrapper-content animated fadeInRight">
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="ibox float-e-margins">
-                <div class="ibox-content">
-                    <div class="wrapper wrapper-content">
-                        <div class="row">
-                            <table class="table  table-hover table-responsive table-striped">
-                                <thead>
-                                    <tr>
-                                        <th>Task ID</th>
-                                        <th>Task Name</th>
-                                        <th>Assigned To</th>
-                                        <th>Due Date</th>
-                                        <th>Task Status</th>
-                                        <th>Edit</th>
-                                        <th>Delete</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="table_body" class="scrollable">
-                                    @if (Model.Count() > 0)
-                                    {
-                                        foreach (var task in Model)
-                                        {
+    </div>
+    <div class="card-body">
+        <div class="wrapper wrapper-content animated fadeInRight">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="ibox float-e-margins">
+                        <div class="ibox-content">
+                            <div class="wrapper wrapper-content table-responsive">
+                                <table class="table cstm_table table-hover table-striped">
+                                        <thead>
                                             <tr>
-                                                <td>@task.TaskId</td>
-                                                <td>@task.TaskName</td>
-                                                <td>@string.Concat(@task.User.FirstName, " ", @task.User.LastName)</td>
-                                                <td>@task.DueDate.Value.Date</td>
-                                                <td>@task.TaskStatus</td>
-                                                <td>
-                                                   
-                                                    <a class="btn btn-danger edit-button" data-id="@task.TaskId">Edit</a>
-                                                </td>
-                                                <td>
-                                                    <a class="btn btn-danger delete-button" data-id="@task.TaskId">Delete</a>
-                                                   
-                                                </td>
+                                                <th>Task ID</th>
+                                                <th>Task Name</th>
+                                                <th>Assigned To</th>
+                                                <th>Due Date</th>
+                                                <th>Task Status</th>
+                                                <th>Edit</th>
+                                                <th>Delete</th>
                                             </tr>
-                                        }
-                                    }
-                                </tbody>
-                            </table>
+                                        </thead>
+                                        <tbody id="table_body" class="scrollable">
+                                            @if (Model.Count() > 0)
+                                            {
+                                                foreach (var task in Model)
+                                                {
+                                                    <tr>
+                                                        <td>@task.TaskId</td>
+                                                        <td>@task.TaskName</td>
+                                                        <td>@string.Concat(@task.User.FirstName, " ", @task.User.LastName)</td>
+                                                        <td>@task.DueDate.Value.Date</td>
+                                                        <td>@task.TaskStatus</td>
+                                                        <td>
+
+                                                            <a class="btn btn-danger edit-button" data-id="@task.TaskId">Edit</a>
+                                                        </td>
+                                                        <td>
+                                                            <a class="btn btn-danger delete-button" data-id="@task.TaskId">Delete</a>
+
+                                                        </td>
+                                                    </tr>
+                                                }
+                                            }
+                                        </tbody>
+                                    </table>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -62,9 +67,6 @@
         </div>
     </div>
 </div>
-
-
-
 
 <!-- Modal for Delete Confirmation -->
 <div id="deleteConfirmationModal" class="modal fade" role="dialog">
