--- a/Views/TimeTable/TimeTable.cshtml
+++ b/Views/TimeTable/TimeTable.cshtml
@@ -1,46 +1,52 @@
-﻿@*@{
+﻿@{
     ViewBag.Title = "Timetable";
-    Layout = "~/Views/_LayoutPage1.cshtml";
-}*@
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 
 @model List<FYPM.Models.ViewModel.TimetableViewModel>
 
-<a style="margin-left:10px" href="@Url.Action("AddTimetable")" class="btn btn-primary">Add Timetable</a>
-
-<div class="wrapper wrapper-content animated fadeInRight">
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="ibox float-e-margins">
-                <div class="ibox-content">
-                    <div class="wrapper wrapper-content">
-                        <div class="row">
-                            <table class="table table-hover table-responsive table-striped">
-                                <thead>
-                                    <tr>
-                                        <th>Date</th>
-                                        <th>Day of the Week</th>
-                                        <th>Time</th>
-                                        <th>Event</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="table_body" class="scrollable">
-                                    @if (Model.Count() > 0)
-                                    {
-                                        foreach (var timetable in Model)
+<div class="card p-3 mt-3">
+    <div class="card-title d-flex flex-wrap justify-content-between align-items-center mb-0">
+        <h3 class="card-label">
+            Timetable
+        </h3>
+        <a style="margin-left:10px" href="@Url.Action("AddTimetable")" class="btn btn-primary">Add Timetable</a>
+    </div>
+    <div class="card-body">
+        <div class="wrapper wrapper-content animated fadeInRight">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="ibox float-e-margins">
+                        <div class="ibox-content">
+                            <div class="wrapper wrapper-content table-responsive">
+                                <table class="cstm_table table table-hover table-striped">
+                                    <thead>
+                                        <tr>
+                                            <th>Date</th>
+                                            <th>Day of the Week</th>
+                                            <th>Time</th>
+                                            <th>Event</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody id="table_body" class="scrollable">
+                                        @if (Model.Count() > 0)
                                         {
-                                            <tr>
-                                                <td>@timetable.Date.ToString("MM/dd/yyyy")</td>
-                                                <td>@timetable.DayOfWeek</td>
-                                                <td>@timetable.Time.ToString()</td>
-                                                <td>@timetable.Event</td>
-                                                <td>
-                                                    <a class="btn btn-danger delete-button" data-id="@timetable.TimetableId">Delete</a>
-                                                </td>
-                                            </tr>
+                                            foreach (var timetable in Model)
+                                            {
+                                                <tr>
+                                                    <td>@timetable.Date.ToString("MM/dd/yyyy")</td>
+                                                    <td>@timetable.DayOfWeek</td>
+                                                    <td>@timetable.Time.ToString()</td>
+                                                    <td>@timetable.Event</td>
+                                                    <td>
+                                                        <a class="btn btn-danger delete-button" data-id="@timetable.TimetableId">Delete</a>
+                                                    </td>
+                                                </tr>
+                                            }
                                         }
-                                    }
-                                </tbody>
-                            </table>
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -48,6 +54,7 @@
         </div>
     </div>
 </div>
+
 
 
 <!-- Modal for Delete Confirmation -->
