--- a/Views/Users/Edit.cshtml
+++ b/Views/Users/Edit.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@model List<FYPM.Models.User>
+@model FYPM.Models.User
 
 
 <style>
@@ -52,13 +52,10 @@
         border-radius: 5px;
     }
 </style>
-@*<div class="container form-container">
-    <div class="row">
-        <div class="col-md-2">
-        </div>
-        <div class="col-md-8 form-content">
-            <h3 class="form-title">Edit User</h3>
-
+<div class="container form-container">
+    <div class="card">
+        <h3 class="card-header">Edit User</h3>
+        <div class="card-body">
             @using (Html.BeginForm())
             {
                 @Html.AntiForgeryToken()
@@ -110,4 +107,4 @@
             </div>
         </div>
     </div>
-</div>*@
+</div>
