--- a/Views/Users/UsersDetail.cshtml
+++ b/Views/Users/UsersDetail.cshtml
@@ -5,63 +5,69 @@
 }
 @model List<FYPM.Models.User>
 
-<h2>Users Detail</h2>
-<div class="wrapper wrapper-content animated fadeInRight">
-    <div class="row">
-        <div class="col-lg-12">
-            <div class="ibox float-e-margins">
-                <div class="ibox-content">
-                    <div class="wrapper wrapper-content">
-                        <div class="row">
-                            <table class="table  table-hover table-responsive table-striped">
-                                <thead class="thead-dark">
-                                    <tr>
-                                        <th>User ID</th>
-                                        <th>First Name</th>
-                                        <th>Last Name</th>
-                                        <th>Email</th>
-                                        <th>User Type</th>
-                                        <th>Created Date</th>
-                                        <th>Edit</th>
-                                        <th>Delete</th>
-                                        <th>Status</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="table_body" class="scrollable">
-                                    @foreach (var user in Model)
-                                    {
-                                        <tr>
-                                            <td>@user.UserId</td>
-                                            <td>@user.FirstName</td>
-                                            <td>@user.LastName</td>
-                                            <td>@user.Email</td>
-                                            <td>@user.UserType.TypeName</td>
-                                            <td>@user.CreatedDate.Value.Date</td>
+<div class="card p-3 mt-3">
+    <div class="card-title d-flex flex-wrap justify-content-between align-items-center mb-0">
+        <h3 class="card-label">
+            Users Detail
+        </h3>
+    </div>
+    <div class="card-body">
+        <div class="wrapper wrapper-content animated fadeInRight">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="ibox float-e-margins">
+                        <div class="ibox-content">
+                            <div class="wrapper wrapper-content">
+                                    <table class="table cstm_table table-hover table-responsive table-striped">
+                                        <thead>
+                                            <tr>
+                                                <th>User ID</th>
+                                                <th>First Name</th>
+                                                <th>Last Name</th>
+                                                <th>Email</th>
+                                                <th>User Type</th>
+                                                <th>Created Date</th>
+                                                <th>Edit</th>
+                                                <th>Delete</th>
+                                                <th>Status</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody id="table_body" class="scrollable">
+                                            @foreach (var user in Model)
+                                            {
+                                                <tr>
+                                                    <td>@user.UserId</td>
+                                                    <td>@user.FirstName</td>
+                                                    <td>@user.LastName</td>
+                                                    <td>@user.Email</td>
+                                                    <td>@user.UserType.TypeName</td>
+                                                    <td>@user.CreatedDate.Value.Date</td>
 
 
-                                            <td>
-                                                <a class="btn btn-primary" href="@Url.Action("Edit", "User", new { id = user.UserId })">Edit</a>
-                                            </td>
+                                                    <td>
+                                                        <a class="btn btn-primary" href="@Url.Action("Edit", "Users", new { id = user.UserId })">Edit</a>
+                                                    </td>
 
-                                            <td>
-                                                <a class="btn btn-danger delete-button" data-id="@user.UserId">Delete</a>
-                                            </td>
+                                                    <td>
+                                                        <a class="btn btn-danger delete-button" data-id="@user.UserId">Delete</a>
+                                                    </td>
 
-                                            <td>
-                                                <div class="dropdown">
-                                                    
-                                                    <select class="btn btn-secondary dropdown-toggle" id="statusDropdown">
-                                                        <option value="1">Active</option>
-                                                        <option value="2">Inactive</option>
-                                                        
-                                                    </select>
-                                                </div>
-                                            </td>
+                                                    <td>
+                                                        <div class="dropdown">
 
-                                        </tr>
-                                    }
-                                </tbody>
-                            </table>
+                                                            <select class="btn btn-secondary dropdown-toggle" id="statusDropdown">
+                                                                <option value="1">Active</option>
+                                                                <option value="2">Inactive</option>
+
+                                                            </select>
+                                                        </div>
+                                                    </td>
+
+                                                </tr>
+                                            }
+                                        </tbody>
+                                    </table>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -69,8 +75,6 @@
         </div>
     </div>
 </div>
-
-
 <div id="deleteConfirmationModal" class="modal fade" role="dialog">
     <div class="modal-dialog">
         <div class="modal-content">
